created base javascript script containing randomizer and prompts

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rock, Paper, Scissors</title>
+  <title>Random Password</title>
 </head>
 
 <body>
-  <h1 id="h1">Click Rock, Paper, or Scissors</h1>
-
-  <script src="./script.js"></script>
+  <h1 id="h1">Generate a random password</h1>
+  <button id="randomize"><img src="./Assets/button.png"></button>
+  <button id="prompt"><img src="./Assets/button.png"></button>
+  <script src="./js.js"></script>
 </body>
 </html>
