added a form for password generation and preview

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
 <body>
   <h1 id="h1">Generate a random password</h1>
-  <button id="randomize"><img src="./Assets/button.png"></button>
-  <button id="prompt"><img src="./Assets/button.png"></button>
+  <!-- <button id="prompt"><img src="./Assets/button.png"></button> -->
+  <form name="myform" method="post" action="">
+    <input name="row_password" type="text" size="40">
+    <input type="button" class="button" value="Generate" id="prompt" tabindex="2">
   <script src="./js.js"></script>
 </body>
 </html>
