--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, inixtial-scale=1.0" />
   <title>Random Password</title>
 </head>
 
@@ -11,7 +11,7 @@
   <h1 id="h1">Generate a random password</h1>
   <!-- <button id="prompt"><img src="./Assets/button.png"></button> -->
   <form name="myform" method="post" action="">
-    <input name="row_password" type="text" size="150">
+    <input name="row_password" type="text" value="This is where your new password will generate"  size="150">
     <input type="button" class="button" value="Generate" id="prompt" tabindex="2">
   <script src="./js.js"></script>
 </body>
