updated index with comments, updated readme with bold titles

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
 <body>
   <h1 id="h1">Generate a random password</h1>
-  <!-- <button id="prompt"><img src="./Assets/button.png"></button> -->
+  <!-- creating a form for the password to populate -->
   <form name="myform" method="post" action="">
     <input name="row_password" type="text" value="This is where your new password will generate"  size="150">
+    <!-- button used in the javascript to kick off the randomizer program -->
     <input type="button" class="button" value="Generate" id="prompt" tabindex="2">
   <script src="./js.js"></script>
 </body>
