--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, inixtial-scale=1.0" />
+  <meta name="viewport" content="width=device-width" />
   <title>Random Password</title>
 </head>
 
